# arbitrage_explore

./: .gitignore  README.md
knowledge-base/: 00-导读与使用指南.md
knowledge-base/01-认知基础/: 01-套利的本质与第一性原理.md  02-思维模型与心智框架.md  03-价差的来源与消亡.md  04-信息差与认知套利.md
knowledge-base/02-套利分类体系/: 01-按维度分类总览.md  02-空间套利.md  03-时间套利.md  04-信息套利.md  05-形态加工套利.md  06-信用与风险套利.md  07-资质与监管套利.md  08-规模套利.md  09-统计与概率套利.md
knowledge-base/03-机会评估方法论/: 01-机会评估检查清单.md  02-成本与摩擦分析.md  03-资金效率与年化.md  04-风险管理.md  05-护城河与可持续性.md
knowledge-base/04-领域机会地图/: 01-加密货币套利.md  02-AI工具与服务套利.md  03-电商与实物套利.md  04-金融市场套利.md  05-信息与知识套利.md  06-跨境与地域套利.md
knowledge-base/05-市场动态/: 定期扫描SOP.md  更新日志.md  机会追踪表.md
knowledge-base/06-工具与资源/: 信息源清单.md  工具清单.md
knowledge-base/07-垂直项目赛道分析/: 00-总览与结论.md  01-加密套利系统.md  02-AI中转站赛道.md  03-机会订阅服务.md
projects/opportunity-radar/: 01-产品定位与商业模式.md  02-赛道选择.md  03-信息源与一手消息获取.md  04-信息处理流水线.md  05-交付与订阅机制.md  06-合规与信任框架.md  (+2 more)
projects/opportunity-radar/engine/: .env.example  README.md  WALKTHROUGH-加密赛道.md  config.py  db.py  pyproject.toml  radar.py  scheduler.py  sources_seed.py  sources_seed_crypto.py  sources_seed_dev.py  tracks.py
projects/opportunity-radar/engine/collectors/: __init__.py  ai_collectors.py  base.py  crypto_alpha.py  crypto_collectors.py  dev_collectors.py  rss_collector.py
projects/opportunity-radar/engine/pipeline/: __init__.py  ai_tagger.py  filter.py  health.py  scorer.py
projects/opportunity-radar/engine/publishers/: __init__.py  exporters.py  rss_out.py  site_out.py  telegram_pub.py
projects/opportunity-radar/engine/ui/: __init__.py  app.py
(+4 files in other folders)
